--- a/academy_tshirt/views/views.xml
+++ b/academy_tshirt/views/views.xml
@@ -103,9 +103,9 @@
       <field name="res_model">academy_tshirt_order</field>
       <field name="view_mode">kanban,tree,form</field>
     </record>    
-
-    <record model="ir.actions.client" id="dashboard">
-      <field name="name">Dashboard</field>
+ 
+     <record model="ir.actions.client" id="dashboard">
+      <field name="name">VPANO Dashboard</field>
       <field name="tag">academy_tshirt.dashboard</field>
     </record>    
 
@@ -115,12 +115,12 @@
 
     <!-- menu categories -->
 
-    <menuitem name="Dashboard" id="academy_tshirt.dashboard_menu" parent="academy_tshirt.menu_root" sequence="1"/>
+    <menuitem name="Dashboard" id="academy_tshirt.dashboard_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.dashboard" sequence="1"/>
     <menuitem name="T-shirt Orders" id="academy_tshirt.menu_2" parent="academy_tshirt.menu_root" action="academy_tshirt.action_window" sequence="2"/>
 
     <!-- actions -->
     <!-- action="academy_tshirt.action_window" -->
-    <menuitem name="Call dashboard.js" id="academy_tshirt.menu_1_list" parent="academy_tshirt.dashboard_menu" action="academy_tshirt.dashboard" sequence="10" />
+    <!-- <menuitem name="Call dashboard.js" id="academy_tshirt.menu_1_list" parent="academy_tshirt.dashboard_menu" action="academy_tshirt.dashboard" sequence="10" /> -->
 
     <!-- action="academy_tshirt.action_server"               -->
     <!-- <menuitem name="action_server" id="academy_tshirt" parent="academy_tshirt.menu_2" action="academy_tshirt.action_window"/> -->
