--- a/academy_tshirt/views/views.xml
+++ b/academy_tshirt/views/views.xml
@@ -12,6 +12,7 @@
             <field name="state" widget="statusbar" clickable="1"/>
           </header>
           <sheet>
+            <widget name="order_warning"/>
             <group>
               <group>
                 <field name="customer_id"/>
