--- a/academy_tshirt/views/views.xml
+++ b/academy_tshirt/views/views.xml
@@ -100,7 +100,7 @@
 
     <!-- actions -->
     <record  model="ir.actions.act_window" id="academy_tshirt.action_window">
-      <field name="name">Academy Tshirt.</field>
+      <field name="name">VPANO Shirt.</field>
       <field name="res_model">academy_tshirt_order</field>
       <field name="view_mode">kanban,tree,form</field>
     </record>    
@@ -117,13 +117,13 @@
 
     <!-- Top menu item -->
 
-    <menuitem name="Academy Tshirt" id="academy_tshirt.menu_root"/>
+    <menuitem name="VPANO Shirt" id="academy_tshirt.menu_root"/>
 
     <!-- menu categories -->
 
     <menuitem name="Dashboard" id="academy_tshirt.dashboard_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.dashboard" sequence="1"/>
-    <menuitem name="T-shirt Orders" id="academy_tshirt.order_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.action_window" sequence="2"/>
-    <menuitem name="Services" id="academy_tshirt.myservice_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.myservice" sequence="10" />
+    <menuitem name="Shirt Orders" id="academy_tshirt.order_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.action_window" sequence="2"/>
+    <menuitem name="Report" id="academy_tshirt.myservice_menu" parent="academy_tshirt.menu_root" action="academy_tshirt.myservice" sequence="10" />
 
     <!-- actions -->
     <!-- action="academy_tshirt.action_window" -->
